fixed message alignment

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,6 +2,15 @@
     color: red;
 }
 
+.bottom {
+    position: fixed;
+    bottom: 0;
+}
+
+.right {
+    text-align: right;
+}
+
 .autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
 .autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
 .autocomplete-selected { background: #F0F0F0; }
